HK: move from each lib to hf_hk_lib

--- a/JUICE-CDF-HF-SID2.ipynb
+++ b/JUICE-CDF-HF-SID2.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL for ASW1/2/3 -- 2025/10/14"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL for ASW1/2/3 -- 2025/10/24"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
-    "comp_mode = 0                           # [Complex]   0: Poweer  1: Matrix   3: Matrix-2D  >3: any\n",
+    "comp_mode = 0                           # [Complex]   0: Power   1: Matrix   3: Matrix-2D  >3: any\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep1 = 4;  n_sweep2 = 6;  n_sweep3 = 9\n",
+    "n_sweep1 = 0;  n_sweep2 = data.n_time//2;  n_sweep3 = -1\n",
     "print(f\"[First peak - {n_sweep1}]\")\n",
     "peak_E = np.ravel(data.Eu_i[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"Eu:\", '{:.2e} '.format(peak_E[peak_f]))\n",
     "peak_E = np.ravel(data.Eu_i[n_sweep1]); peak_f = np.nanargmin(peak_E); print(\"Eu:\", '{:.2e} '.format(peak_E[peak_f]))\n",
@@ -306,6 +306,16 @@
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
     "    fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dc99f41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.epoch"
    ]
   },
   {
