--- a/JUICE-CDF-HF-SID21.ipynb
+++ b/JUICE-CDF-HF-SID21.ipynb
@@ -437,6 +437,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "37aa691a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.epoch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "002bfb5e",
    "metadata": {},
    "outputs": [],
@@ -666,18 +676,18 @@
     "f_min = f_min0;  f_max = f_max0\n",
     "\n",
     "fig = plt.figure(figsize=(16, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
-    "#ax1.plot(freq_1d, EuEu_med,      '-r',  linewidth=2.0, label='EuEu_med')\n",
-    "#ax1.plot(freq_1d, EvEv_med,      '-g',  linewidth=2.0, label='EvEv_med')\n",
-    "#ax1.plot(freq_1d, EwEw_med,      '-b',  linewidth=2.0, label='EwEw_med')\n",
+    "ax1.plot(freq_1d, EuEu_med,      '-r',  linewidth=2.0, label='EuEu_med')\n",
+    "ax1.plot(freq_1d, EvEv_med,      '-g',  linewidth=2.0, label='EvEv_med')\n",
+    "ax1.plot(freq_1d, EwEw_med,      '-b',  linewidth=2.0, label='EwEw_med')\n",
     "ax1.plot(freq_1d, spec.EuEu[n0], ':r',  linewidth=1.0, label='uu init')\n",
     "ax1.plot(freq_1d, spec.EvEv[n0], ':g',  linewidth=0.8, label='vv init')\n",
     "ax1.plot(freq_1d, spec.EwEw[n0], ':b',  linewidth=0.6, label='ww init')\n",
-    "#ax1.plot(freq_1d, spec.EuEu[n1], '-.r', linewidth=1.0, label='uu half')\n",
-    "#ax1.plot(freq_1d, spec.EvEv[n1], '-.g', linewidth=0.8, label='vv half')\n",
-    "#ax1.plot(freq_1d, spec.EwEw[n1], '-.b', linewidth=0.6, label='ww half')\n",
-    "#ax1.plot(freq_1d, spec.EuEu[n2], '_r',  linewidth=1.0, label='uu end')\n",
-    "#ax1.plot(freq_1d, spec.EvEv[n2], '_g',  linewidth=0.8, label='vv end')\n",
-    "#ax1.plot(freq_1d, spec.EwEw[n2], '_b',  linewidth=0.6, label='ww end')\n",
+    "ax1.plot(freq_1d, spec.EuEu[n1], '-.r', linewidth=1.0, label='uu half')\n",
+    "ax1.plot(freq_1d, spec.EvEv[n1], '-.g', linewidth=0.8, label='vv half')\n",
+    "ax1.plot(freq_1d, spec.EwEw[n1], '-.b', linewidth=0.6, label='ww half')\n",
+    "ax1.plot(freq_1d, spec.EuEu[n2], '_r',  linewidth=1.0, label='uu end')\n",
+    "ax1.plot(freq_1d, spec.EvEv[n2], '_g',  linewidth=0.8, label='vv end')\n",
+    "ax1.plot(freq_1d, spec.EwEw[n2], '_b',  linewidth=0.6, label='ww end')\n",
     "ax1.set_yscale('log')\n",
     "if f_mode == 1:\n",
     "    ax1.set_xscale('log')\n",
@@ -799,16 +809,16 @@
     "ax1.set_title(\"[\" + data_name + \"]\")\n",
     "if   data.U_selected[0]==1 and data.V_selected[0]==1:\n",
     "    ax1.set_ylabel('EuEu [kHz]'); ax2.set_ylabel('EvEv [kHz]')\n",
-    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
-    "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
+    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "elif data.V_selected[0]==1 and data.W_selected[0]==1:\n",
     "    ax1.set_ylabel('EvEv [kHz]'); ax2.set_ylabel('EwEw [kHz]')\n",
-    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
-    "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
+    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "else:\n",
     "    ax1.set_ylabel('EvEv [kHz]'); ax2.set_ylabel('EuEu [kHz]')\n",
-    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
-    "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
+    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "ax2.set_xlabel(str_date)\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(spec.str_unit)\n",
     "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(spec.str_unit)\n",
