--- a/JUICE-CDF-HF-SID3.ipynb
+++ b/JUICE-CDF-HF-SID3.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/10/14"
+    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/10/24"
    ]
   },
   {
@@ -81,9 +81,9 @@
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
-    "f_mode    = 0                           # [Frequency] 0: linear  1: log\n",
+    "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
-    "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
+    "gap_mode  = 0                           # [gap]       0: n/a     1: gap\n",
     "# *** Frenquency in Linear ***\n",
     "f_mode_min = 80;  f_mode_max = 2068     # 80 - 2068 : as same as SID-4/20\n",
     "# *** Power range set ***\n",
@@ -490,26 +490,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24c49a95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.ADC_ovrflw "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9480250b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.HF_QF"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6cc526e7",
    "metadata": {},
@@ -544,7 +524,7 @@
     "ax8.plot(np.ravel(data.T_HF_FPGA),      ':r', label='T (HK-FPGA)')\n",
     "ax8.plot(np.ravel(data.T_RWI_CH1),      ':b', label='T (RWI1)')\n",
     "ax8.plot(np.ravel(data.T_RWI_CH2),      ':g', label='T (RWI2)')\n",
-    "# ax8.plot(np.ravel(data.cal_signal*10),  '-k', label='CAL')\n",
+    "ax8.plot(np.ravel(data.cal_signal*10),  '-k', label='CAL')\n",
     "ax8.plot(np.ravel(data.HF_QF*5),        '.r', label='HF_QF*5')\n",
     "ax8.plot(np.ravel(data.complex*10+4),   '_r', label='comp')\n",
     "ax8.plot(np.ravel(data.RFI_rejection*10+2), '_b', label='RFI')\n",
@@ -597,6 +577,16 @@
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
     "    fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "236e150e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.epoch"
    ]
   },
   {
@@ -1355,7 +1345,7 @@
    "outputs": [],
    "source": [
     "p_min = p_min0;  p_max = p_max0\n",
-    "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
+    "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-3\n",
     "# n0 = 1002;  n1 = 1003;   n2 = 1004\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "# f_min = 100;     f_max = 500\n",
