--- a/JUICE-CDF-HF-SID4-20.ipynb
+++ b/JUICE-CDF-HF-SID4-20.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2025/10/21"
+    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2025/10/26"
    ]
   },
   {
@@ -87,8 +87,8 @@
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
-    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
-    "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
+    "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
+    "gap_mode  = 0                           # [gap]       0: n/a     1: gap\n",
     "# *** Power range ***\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
@@ -99,20 +99,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02845145",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comp_mode = 20                           # [Complex]   0: Power  1: Matrix   3: Matrix-2D    >3: any"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b3da529e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "sid = 20\n",
+    "comp_mode = 4                           # [Complex]   0: Power  1: Matrix   3: Matrix-2D    >3: any\n",
     "E_min = '2024-08-19 20:30:00';  t_min0 = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\")\n",
     "E_max = '2024-08-19 20:40:00';  t_max0 = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\")\n",
     "t_min0 = 0;  t_max0 = 0"
@@ -139,7 +131,6 @@
     "# date='20240706';  ver = 'V02'\n",
     "# date='20240819';  ver = 'V02'\n",
     "date='0';  ver = 'V02'\n",
-    "sid = 20\n",
     "data_dir, data_name_list = juice_sid20.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -159,10 +150,10 @@
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
     "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid20.hf_sid20_read(cdf)\n",
     "    if i==0:\n",
-    "        data = data1;                                       print(\"sid\", sid, data.EuEu.shape)\n",
+    "        data = data1;                                   print(\"sid\", sid, data.EuEu.shape)\n",
     "    else:\n",
-    "        data = juice_sid20.hf_sid20_add(data, data1, sid);  print(\"sid\", sid, data.EuEu.shape)\n",
-    "data_name = os.path.split(data_name)[1];                    print(\"data name:\", data_name)"
+    "        data = juice_sid20.hf_sid20_add(data, data1);   print(\"sid\", sid, data.EuEu.shape)\n",
+    "data_name = os.path.split(data_name)[1];                print(\"data name:\", data_name)"
    ]
   },
   {
@@ -246,7 +237,7 @@
     "    for i in range(n_time1-1):\n",
     "        if spec.scet[i+1]-spec.scet[i] > 60:\n",
     "            print(\"[gap]\", i, spec.epoch[i], i+1, spec.epoch[i+1])\n",
-    "            juice_sid20.spec_nan(spec, i, sid);  juice_sid20.spec_nan(spec, i+1, sid)"
+    "            juice_sid20.spec_nan(spec, i);  juice_sid20.spec_nan(spec, i+1)"
    ]
   },
   {
@@ -430,6 +421,16 @@
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
     "    fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fab5c0f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.epoch"
    ]
   },
   {
