--- a/JUICE-CDF-HF-SID7.ipynb
+++ b/JUICE-CDF-HF-SID7.ipynb
@@ -531,6 +531,16 @@
    "source": [
     "np.max(data.E_i), np.max(data.E_q)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "145d6a67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.E_i, data.E_q"
+   ]
   }
  ],
  "metadata": {
